--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "brian2694/laravel-toastr": "^5.57",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.7",
+        "jorenvanhocht/laravel-share": "^4.2",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
