--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^3.2.36",
+        "vue-template-compiler": "^2.7.10"
+    },
+    "dependencies": {
+        "vue-loader": "^17.0.0"
     }
 }
